--- a/export.html
+++ b/export.html
@@ -49,7 +49,8 @@
             <ul>
               <!-- <li><a href="./import.html">Import</a></li> -->
               <li><a href="./export.html">Export</a></li>
-              <li class="dropdown"><a href="#"><span>Import</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="./export.html"><b>Export</b></a></li>
+              <li class="dropdown"><a href="#"><span><b>Import</b></span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
                   <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
@@ -304,13 +305,15 @@
             <h4>Our Products</h4>
             <ul>
               <!-- <li><a href="./import.html">Import</a></li> -->
-                  <li><a href="./export.html">Export</a></li>
-                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
+                <li><a href="./export.html"><b>Export</b></a></li>
+              <li class=""><a href="#"><span><b>Import</b></span> <i class="bi bi-chevron-right"></i></a>
                   <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
+                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
                   <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html">Fan Coil Units</a></li>
                   <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html">Heat Pumps</a></li>
                   <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html">NexusLED</a></li>
                   <li><a href="./pages/InstrumentsAccessories/Instruments & Accessories.html">Instruments & Accessories</a></li>
+              </li>
                   
             </ul>
   
