--- a/import.html
+++ b/import.html
@@ -49,7 +49,8 @@
             <ul>
               <!-- <li><a href="./import.html">Import</a></li> -->
               <li><a href="./export.html">Export</a></li>
-              <li class="dropdown"><a href="#"><span>Import</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="./export.html"><b>Export</b></a></li>
+              <li class="dropdown"><a href="#"><span><b>Import</b></span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
                   <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
